# napari-microplate

./: .gitignore  LICENSE  NOTICE  README.md  _pipeline.py  _viz.py  pyproject.toml
.github/workflows/: publish.yml
napari_microplate/: __init__.py  _dock.py  _models.py  _pipeline.py  _weights.py  napari.yaml
scripts/: upload_weights_to_hf.py
